[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
getkey = "^0.6.5"
input-helper = "^0.1.44"
smart_input = "^0.32"
random_name = "^0.1.1"
name1 = "^0.0.3"
name-tools = "^0.1.7"
define = "^1.74"
Flask = "^2.1.2"
take_break = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"